doc: updates disciplines doc
