# app/Http/Requests/V1/Discipline/DestroyRequest.php
@@ -3,15 +3,18 @@
 namespace App\Http\Requests\V1\Discipline;
 
 use Illuminate\Foundation\Http\FormRequest;
+use App\Http\Requests\V1\Discipline\Concerns\CanDisciplineTrait;
 
 /**
  * Class DestroyRequest
- * @package App\Http\Requests\V1\User
+ * @package App\Http\Requests\V1\Discipline
  *
- * @urlParam user integer required O identificador da disciplina. Example: 1
+ * @urlParam discipline integer required O identificador da disciplina. Example: 1
  */
 class DestroyRequest extends FormRequest
 {
+    use CanDisciplineTrait;
+
     /**
      * Determine if the user is authorized to make this request.
      *
@@ -19,7 +22,7 @@ class DestroyRequest extends FormRequest
      */
     public function authorize()
     {
-        return true;
+        return $this->canDiscipline();
     }
 
     /**
